--- a/themes/predocs/layouts/footer.html
+++ b/themes/predocs/layouts/footer.html
@@ -1,6 +1,7 @@
 <div class="footer">
-  <% if (config.version) { %>
-  <p class="version text-muted">Version ${config.version}</p>
-  <% } %>
-  <p class="credit text-muted">Powered by <a href="https://github.com/kobo/gaiden">Gaiden</a></p>
+  <p class="credit text-muted">
+    <% if (config.version) { %>
+      Version ${config.version} -
+    <% } %>
+    Powered by <a href="https://github.com/kobo/gaiden">Gaiden</a></p>
 </div>
