--- a/themes/predocs/layouts/header.html
+++ b/themes/predocs/layouts/header.html
@@ -1,4 +1,6 @@
 <div class="header">
-  <i class="fa fa-bars sidebar-toggle"></i>
-  <span class="title"><a href="${homePage ? currentPage.relativize(homePage) : '#'}">$title</a></span>
+  <% if (metadata.showSidebar != null ? metadata.showSidebar : true) { %>
+    <i class="fa fa-bars sidebar-toggle"></i>
+  <% } %>
+  <span class="title">${currentPage.title ?: title}</span>
 </div>
